💄 Fix visual overflow bug on small screens

--- a/src/components/ydi/ydiWrapper.module.css
+++ b/src/components/ydi/ydiWrapper.module.css
@@ -11,6 +11,7 @@
 
 .question .result {
     position: relative;
+    overflow: hidden;
     margin-top: 50px;
     margin-bottom: 70px;
 }
